# llm-zoomcamp

./: .gitignore  README.md  skills-lock.json
03-orchestration/: setup-secrets.sh
04-evaluation/: 01_data_generation.py  02_batch_generation.py  hw4.py  pyproject.toml
05-hw/: hw5_notebook.py  main.py  pyproject.toml
05-monitoring/: app.py  dashboard.py  db_init.py  db_query.py  db_save.py  judge.py  metrics.py  pyproject.toml  rag_helper.py
llm-zoomcamp-code/: hw01.py  notebook.py  persistent_rag.py  persistent_rag_ingest.py  pyproject.toml  rag_helper.py  rag_notebook.py
llm-zoomcamp-onnx/: hw2.py  pyproject.toml  rag_helper.py
notes/: 02_vector_search.md  03_orchestration_kestra.md  04_evaluation.md
