[project]
name = "05-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.5",
    "marimo>=0.23.14",
    "minsearch>=0.2.0",
    "openai>=2.46.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
